week02/giwoong/backend/LoginStudy/src/main/java/com/example/loginstudy/global/error/exception/AccessDeniedGroupException.java
package com.example.loginstudy.global.error.exception;

public abstract class AccessDeniedGroupException extends RuntimeException{
    public AccessDeniedGroupException(String message) {
        super(message);
    }
}
